# zephyr-zl27arm

./: CMakeLists.txt  README.md  app.overlay  bootstrap.py  prj.conf  west.yml
.github/workflows/: build.yml
.run/: GDB via Debug Server.run.xml
src/: data.proto  main_minimal.c  main_nanopb.c  rtt_main.c
